# VulkanTest

./: .gitignore  CMakeLists.txt  README.md  build-all.bat
data/shaders/: compile_shaiders.bat  triangle.old  triangle.vert
src/: Application.cpp  Application.h  CompilerMessages.h  DebugUtilsMessenger.cpp  DebugUtilsMessenger.h  EnumerateScheme.hpp  ErrorHandling.hpp  KeyBoard.cpp  KeyBoard.h  Main.cpp  QueueFamilies.cpp  QueueFamilies.h  Semaphore.hpp  Settings.hpp  Singleton.hpp  SwapChain.cpp  SwapChain.h  Timer.hpp  Tools.cpp  Tools.h  VertexBuffer.cpp  VertexBuffer.h  VulkanIntrospection.hpp
